[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Matthew Norris <matthew@mdnorris.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
mkl = "^2023.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
